css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
}

body {
    width: 100%;
    height: 100%;
    color: white;
    background-color: #101a20;
    overflow-x: hidden;
}



/* SCROLL BAR CUSTOM */
::-webkit-scrollbar-track {
	-webkit-box-shadow: inset 0 0 6px #111b21;
	background-color: #111b21;
}

::-webkit-scrollbar {
	width: 5px;
	background-color: #111b21;
}

::-webkit-scrollbar-thumb {
	-webkit-box-shadow: inset 0 0 6px #111b21;
	background-color: #373f44;
}
/* /SCROLL BAR CUSTOM */



/* CONTAINER and SIDE */
.container {
    display: flex;
    margin: 20px auto;
    height: 100%;
    max-width: 1600px;
}
/* _______________________________________________________ */
.left-side {
    height: calc(100vh - 40px);
    width: calc(100% / 4 + 200px);
    border-right: 1px solid #272f34;
    background-color: #111b21;
}
/* _______________________________________________________ */
.main-side {
    display: flex;
    flex-direction: column;
    height: calc(100vh - 40px);
    width: 100%;
}
/* /CONTAINER and SIDE */



/* ABOUT FLEX */
.flex {
    display: flex;
    align-items: center;
    justify-content: space-between;
}
/* _______________________________________________________ */
.justify {
    justify-content: inherit;
}
/* _______________________________________________________ */
.column {
    flex-direction: column;
}
/* _______________________________________________________ */
.gap {
    gap: 10px;
}
/* /ABOUT FLEX */



/* strange classes */
.main-image-size {
    padding-right: 15px;
}

img {
    width: 50px;
    border-radius: 100%;
}

header, .my-profile {
    padding: 10px 16px;
    background-color: #202c33;
}
/* /strange classes */



/* TITLE AND TEXT */
h4 {
    margin-right: 25px;
    font-size: 14px;
    font-weight: normal;
}
/* _______________________________________________________ */
h6 {
    width: 300px;
    height: 24px;
    color: #aebac1;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}
/* _______________________________________________________ */
span {
    font-size: 12px;
}
/* _______________________________________________________ */
.black {
    color: rgba(0, 0, 0, 0.815);
}
/* /TITLE AND TEXT */



/* INPUT AND BUTTONS */
input {
    padding:  9px 12px;
    width: 100%;
    border: none;
    border-radius: 10px;
    color: #aebac1;
    background-color: #2a3942;
}
/* _______________________________________________________ */
button {
    cursor: pointer;
    border: none;
    border-radius: 10px;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    background-color: #2a3942;
}
/* /INPUT AND BUTTONS */



/* CONTACTS */
.bell {
    justify-content: inherit;
    padding: 20px 16px;
    background-color: #8edafc;
}
/* _______________________________________________________ */
.notify {
    text-decoration: underline;
    font-size: 14px;
    color: #5d869d;
}
/* _______________________________________________________ */
.be-unite {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}
/* _______________________________________________________ */
.search-bar, .contacts {
    padding: 10px 16px;
}

.contact-list {
    word-wrap:break-word;
    overflow: hidden;
    text-overflow: ellipsis;
}
/* _______________________________________________________ */
.contacts {
    display: flex;
    justify-content: space-between;
    width: 100%;
    border-bottom: 1px solid #2d353a;
}
/* _______________________________________________________ */
.contacts:hover {
    cursor: pointer;
    background-color: #202c33;
}
/* _______________________________________________________ */
.overflow {
    height: calc(100% - 210px);
    overflow-y: scroll;
}
/* _______________________________________________________ */
.active {
    background-color: #2a3942;
}
/* /CONTACTS */



/* MAIN SIDE */
main {
    display: flex;
    flex-direction: column;
    height: 100%;
    padding: 50px;
    overflow-y: scroll;
    overscroll-behavior-y: contain;
    scroll-snap-type: y proximity;
    background-image: url(../img/background.jpg);
}
/* _______________________________________________________ */
.my-message {
    position: relative;
    display: flex;
    align-self: flex-end;
    margin: 5px;
    padding: 6px 9px 8px;
    border-radius: 6px;
    background-color: #005c4b;
    max-width: 630px;
    white-space: pre-line;
}

main > div:last-child {
    scroll-snap-align: end;
}
/* _______________________________________________________ */
.their-message {
    position: relative;
    display: flex;
    align-self: flex-start;
    margin: 5px;
    padding: 6px 9px 8px;
    border-radius: 6px;
    background-color: #202c33;
}
/* _______________________________________________________ */
.data {
    position: absolute;
    bottom: 2px;
    right: 5px;
    font-size: 10px;
}
/* /MAIN SIDE */



/* FOOTER */
footer {
    padding: 10px 16px;
    background-color: #202c33;
}
/* _______________________________________________________ */
.max-size {
    width: 100%;
}
/* /FOOTER */



/* DROPDOWN */
.dropdown {
    display: inline-block;
    position: absolute;
    top: -7px;
    right: 0px;
}
/* _______________________________________________________ */
.dropdown-content {
    display: none;
    position: absolute;
    top: 17px;
    left: -110px;
    min-width: 160px;
    padding: 10px 13px;
    z-index: 1;
    border-radius: 20px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    background-color: #202c33;
}
/* _______________________________________________________ */
.dropdown:hover .dropdown-content {
    display: block;
}
/* _______________________________________________________ */
p {
    color: #a9bac1;
    cursor: pointer;
}
/* /DROPDOWN */

/* DELETEMENU */
.delete {
    position: relative;
    display: inline-block;
    z-index: 10;
}
/* _______________________________________________________ */
.delete_hover {
    display: inline-block;
    padding: 10px;
    cursor: pointer;
    border-radius: inherit;
    background-color: #202c33;
}
/* _______________________________________________________ */
.delete_menu {
    position: absolute;
    display: none;
    top: 100%;
    right: 40%;
    min-width: 200px;
    background: #202c33;
    box-shadow: 0 3px 2px rgba(0,0,0,0.3);
}
/* _______________________________________________________ */
.delete:hover .delete_menu {
    display: block;
}
/* _______________________________________________________ */
.delete_menu span {
    display: block;
    padding: 15px;
    color: white;
    cursor: pointer;
}
/* /DELETEMENU */



/* FONTAWESOME */
.footer-icon-padding {
    padding: 5px 10px;
}
/* _______________________________________________________ */
.fa-bell-slash {
    margin-right: 15px;
    padding: 16px 14px;
    border-radius: 50%;
    color: #8edafc;
    background-color: #202c33;
}
/* _______________________________________________________ */
.fa-bars-filter {
    color: white;
}
/* _______________________________________________________ */
.fa-solid, .fa-regular {
    cursor: pointer;
    color: #aebac1;
    padding: 10px;
}
.fa-microphone, .fa-paper-plane {
    font-size: 16px;
}
/* /FONTAWESOME */



.splash {
    cursor: pointer;
    position: fixed;
    top: 50%;
    left: 50%;
    height: 100%;
    width: 100%;
    transform: translate(-50%, -50%);
    background-color: black;
    z-index: 15;
}

.hidden {
    display: none;
}

.splash-header {
    height: 100%;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    text-decoration: underline;
}




body.light {
    background-color: #fff;
    color: black;
}

.light {
    background-color: #fff;
    color: black;
}

.mhlight {
    background-color: #f0f2f5;
    color: black;
}

.lightimg {
    background-image: url(../img/mine.jpg);
}

.activeLight {
    background-color: #f0f2f5;
    color: black;
}

.ciao {
    color: black;
}


.checkbox {
    opacity: 0;
    position: absolute;

}

.label {
    background-color: #111;
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-radius: 50px;
    position: relative;
    padding: 5px;
    height: 26px;
    width: 50px;
}

.ball {
    background-color: #fff;
    border-radius: 50%;
    position: absolute;
    top: 2px;
    left: 2px;
    height: 22px;
    width: 22px;
    transition: transform 0.2s linear;
}

.checkbox:checked + .label .ball {
    transform: translateX(24px);
}

.fa-moon {
    color #f1c40f;
}

.fa-sun {
    color: #f39c12;
}

.mobile {
    display: none;
}


@media screen and (max-width: 576px) {

    body {
        overflow-x: hidden;
        overflow-y: hidden;
        }

    .main-side {
        display: none;
    }

    .left-side {
        flex-grow: 1;
    }

    .left-side-after {
        display: none;
    }

    .main-side-after {
        display: flex;
        overflow: hidden;
    }

    .mobile {
        display: block;
        left: 15px;
        border-radius: 50px;
    }

    header {
        padding-left: 0;
    }

}

